<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.lxien</groupId>
        <artifactId>orbien-main</artifactId>
        <version>0.25.0</version>
    </parent>
    <artifactId>orbien-server-app</artifactId>
    <packaging>jar</packaging>
    <name>orbien-server-app</name>
    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <orbien.version>0.25.0</orbien.version>
        <native-maven-plugin.version>0.11.4</native-maven-plugin.version>
        <spring-boot-maven-plugin.version>4.0.5</spring-boot-maven-plugin.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.github.lxien</groupId>
            <artifactId>orbien-console</artifactId>
            <version>${orbien.version}</version>
        </dependency>
    </dependencies>
    <build>
        <finalName>orbien-server</finalName>
        <plugins>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
                <version>${native-maven-plugin.version}</version>
                <configuration>
                    <buildArgs>
                        <buildArg>--initialize-at-build-time=org.sqlite.util.ProcessRunner</buildArg>
                        <buildArg>--initialize-at-run-time=org.xerial.snappy</buildArg>
                        <buildArg>--initialize-at-run-time=net.jpountz</buildArg>
                        <buildArg>--initialize-at-run-time=com.github.luben.zstd</buildArg>
                        <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                        <arg>-Dio.netty.handler.ssl.noOpenSsl=true</arg>
                    </buildArgs>
                    <mainClass>io.github.lxien.orbien.server.web.OrbienServerStartup</mainClass>
                    <imageName>orbien-server</imageName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <mainClass>io.github.lxien.orbien.server.web.OrbienServerStartup</mainClass>
                    <jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
